--- a/сайтартефакт/table.html
+++ b/сайтартефакт/table.html
@@ -54,32 +54,32 @@
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Орел</th>
+                    <th>Саламандры</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Паук</th>
+                    <th>Муравьи</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Лев</th>
+                    <th>Коты</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Череп</th>
+                    <th>Драконы</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Акула</th>
+                    <th>Богомолы</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Черепаха</th>
+                    <th>Морские коньки</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Гидра</th>
-                    <th>0</th>
+                    <th>Хранители</th>
+                    <th>Не имеют</th>
                 </tr>
             </tbody>
         </table>
