--- a/сайтартефакт/table.html
+++ b/сайтартефакт/table.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" style="margin-bottom:-40px;">
           <ul class="navbar-nav test">
             <li class="nav-item">
-               <a class="nav-link a1" href="index.html">Вернутся на главную</a>
+               <a class="nav-link a1" href="index.html">Вернуться на главную</a>
             </li>
             <!--<li class="nav-item">
               <a class="nav-link" href="#">Зона клуба</a>
@@ -50,7 +50,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <th>Волк</th>
+                    <th>Волки</th>
                     <th>0</th>
                 </tr>
                 <tr>
