--- a/сайтартефакт/table.html
+++ b/сайтартефакт/table.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" style="margin-bottom:-40px;">
           <ul class="navbar-nav test">
             <li class="nav-item">
-               <a class="nav-link a1" href="index.html">Вернуться на главную</a>
+               <a class="nav-link a1" href="index.html">Вернутся на главную</a>
             </li>
             <!--<li class="nav-item">
               <a class="nav-link" href="#">Зона клуба</a>
@@ -50,36 +50,36 @@
             </thead>
             <tbody>
                 <tr>
-                    <th>Волки</th>
+                    <th>Волк</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Саламандры</th>
+                    <th>Орел</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Муравьи</th>
+                    <th>Паук</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Коты</th>
+                    <th>Лев</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Драконы</th>
+                    <th>Череп</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Богомолы</th>
+                    <th>Акула</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Морские коньки</th>
+                    <th>Черепаха</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Хранители</th>
-                    <th>Не имеют</th>
+                    <th>Гидра</th>
+                    <th>0</th>
                 </tr>
             </tbody>
         </table>
