--- a/сайтартефакт/table.html
+++ b/сайтартефакт/table.html
@@ -54,31 +54,15 @@
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Орел</th>
+                    <th>Саламандры</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Паук</th>
+                    <th>Коты</th>
                     <th>0</th>
                 </tr>
                 <tr>
-                    <th>Лев</th>
-                    <th>0</th>
-                </tr>
-                <tr>
-                    <th>Череп</th>
-                    <th>0</th>
-                </tr>
-                <tr>
-                    <th>Акула</th>
-                    <th>0</th>
-                </tr>
-                <tr>
-                    <th>Черепаха</th>
-                    <th>0</th>
-                </tr>
-                <tr>
-                    <th>Гидра</th>
+                    <th>Драконы</th>
                     <th>0</th>
                 </tr>
             </tbody>
