--- a/VolgogradStadion/news.html
+++ b/VolgogradStadion/news.html
@@ -12,72 +12,61 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-1"></div>
-            <div class="card cardBorder col" style="width: 18rem; border: none;">
-                <img src="image/news/news1.png" class="card-img-top" alt="...">
-                <div class="card-body" style="color:#233550;">
-                  <p class="card-text fontSize-30" style="margin-top: -10px;">СКА вышел во второй раунд плей-офф КХЛ</p>
-                  <p class="card-text fontSize-18" style="margin-top: -10px;">26 июня 2021</p>
-                </div>
+                <div class="card col-md-12 col-lg-4" style=" border:none;">
+                    <img src="image/news/news1.png" class="card-img-top" alt="...">
+                    <div class="card-body" style="color:#233550;">
+                      <h5 class="card-title fontSize-30">СКА вышел во второй раунд плей-офф КХЛ</h5>
+                      <p class="card-text fontSize-18">26 июня 2021</p>
+                    </div>
+                  </div>
+                  <div class="card col-md-12 col-lg-4" style=" border:none;">
+                    <img src="image/news/news2.png" class="card-img-top" alt="...">
+                    <div class="card-body" style="color:#233550;">
+                      <h5 class="card-title fontSize-30">Путевка в плей-офф</h5>
+                      <p class="card-text fontSize-18">8 февраля 2021</p>
+                    </div>
+                  </div>
+                  <div class="card col-md-12 col-lg-4" style=" border:none;">
+                    <img src="image/news/news3.png" class="card-img-top" alt="...">
+                    <div class="card-body" style="color:#233550;">
+                      <h5 class="card-title fontSize-30">В ноябре Баста выступит на сцене Ледового дворца в Петербурге</h5>
+                      <p class="card-text fontSize-18">19 апреля 2021</p>
+                    </div>
+                  </div>
             </div>
-            <div class="card cardBorder col" style="width: 20rem; border: none;">
-                <img src="image/news/news2.png" class="card-img-top" alt="...">
-                <div class="card-body" style="color:#233550;">
-                  <p class="card-text fontSize-30" style="margin-top: -10px;">Путевка в плей-офф</p>
-                  <p class="card-text fontSize-18" style="margin-top: -10px;">8 февраля 2021</p>
-                </div>
+            <div class="row">
+                <div class="card col-md-12 col-lg-4" style=" border:none;">
+                    <img src="image/news/news4.png" class="card-img-top" alt="...">
+                    <div class="card-body" style="color:#233550;">
+                      <h5 class="card-title fontSize-30">Центр вакцинации в Ледовом</h5>
+                      <p class="card-text fontSize-18">26 июня 2021</p>
+                    </div>
+                  </div>
+                  <div class="card col-md-12 col-lg-4" style=" border:none;">
+                    <img src="image/news/news5.png" class="card-img-top" alt="...">
+                    <div class="card-body" style="color:#233550;">
+                      <h5 class="card-title fontSize-30">Афиша Ледового дворца: что посетить в первом полугодии 2021-го года</h5>
+                      <p class="card-text fontSize-18">8 февраля 2021</p>
+                    </div>
+                  </div>
+                  <div class="card col-md-12 col-lg-4" style=" border:none;">
+                    <img src="image/news/news6.png" class="card-img-top" alt="...">
+                    <div class="card-body" style="color:#233550;">
+                      <h5 class="card-title fontSize-30">Ледовый Дворец</h5>
+                      <p class="card-text fontSize-18">19 апреля 2021</p>
+                    </div>
+                  </div>
             </div>
-            <div class="card cardBorder col" style="width: 20rem; border: none;">
-                <img src="image/news/news3.png" class="card-img-top" alt="...">
-                <div class="card-body" style="color:#233550;">
-                  <p class="card-text fontSize-30" style="margin-top: -10px;">В ноябре Баста выступит на сцене Ледового дворца в Петербурге</p>
-                  <p class="card-text fontSize-18" style="margin-top: -10px;">19 апреля 2021</p>
+            <div class="row" style="margin-top: 10px; margin-bottom: 50px;">
+                <div class="col"></div>
+                <div class="col-md-3 col-lg-2 pageList" style="vertical-align: center; width: 150px;">
+                    <img src="image/leftarround.png" class="img-fluid" style="margin-top:-4px ;">
+                    <a href="#" class="fontSize-18 active">1</a> 
+                    <a href="#" class="fontSize-18">2</a> 
+                    <a href="#" class="fontSize-18">3</a> 
+                    <a href="#" class="fontSize-18">4 <img src="image/rightarround.png" class="img-fluid" style="margin-top:-4px ;"></a>
                 </div>
+                <div class="col"></div>
             </div>
-            <div class="col-1"></div>
         </div>
-        <div class="row" style="margin-top: 50px;">
-            <div class="col-1"></div>
-            <div class="card cardBorder col" style="width: 18rem; border: none;">
-                <img src="image/news/news4.png" class="card-img-top" alt="...">
-                <div class="card-body" style="color:#233550;">
-                  <p class="card-text fontSize-30" style="margin-top: -10px;">Центр вакцинации в Ледовом</p>
-                  <p class="card-text fontSize-18" style="margin-top: -10px;">26 июня 2021</p>
-                </div>
-            </div>
-            <div class="card cardBorder col" style="width: 20rem; border: none;">
-                <img src="image/news/news5.png" class="card-img-top" alt="...">
-                <div class="card-body" style="color:#233550;">
-                  <p class="card-text fontSize-30" style="margin-top: -10px;">Афиша Ледового дворца: что посетить в первом полугодии 2021-го года</p>
-                  <p class="card-text fontSize-18" style="margin-top: -10px;">8 февраля 2021</p>
-                </div>
-            </div>
-            <div class="card cardBorder col" style="width: 20rem; border: none;">
-                <img src="image/news/news6.png" class="card-img-top" alt="...">
-                <div class="card-body" style="color:#233550;">
-                  <p class="card-text fontSize-30" style="margin-top: -10px;">Ледовый Дворец</p>
-                  <p class="card-text fontSize-18" style="margin-top: -10px;">19 апреля 2021</p>
-                </div>
-            </div>
-            <div class="col-1"></div>
-        </div>
-        <div class="row" style="margin-top: 10px; margin-bottom: 50px;">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col pagelist">
-                <img src="image/leftarround.png" class="img-fluid" style="margin-top:-4px ;">
-                <a href="#" class="fontSize-18 active">1</a> 
-                <a href="#" class="fontSize-18">2</a> 
-                <a href="#" class="fontSize-18">3</a> 
-                <a href="#" class="fontSize-18">4</a>
-                <img src="image/rightarround.png" class="img-fluid" style="margin-top:-4px ;">
-            </div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-        </div>
-    </div>
 </body>
