--- a/VolgogradStadion/news_inside.html
+++ b/VolgogradStadion/news_inside.html
@@ -11,13 +11,13 @@
 </html> 
 <body>
     <div class="container" >
-        <div class="row">
-            <div class="col">
+        <div class="row ">
+            <div class="col-md-12 col-lg-6">
                 <img class="img-fluid" src="image/news_inside/news_inside1.png">
             </div>
-            <div class="col-7" style="color: #233550; font-size: 18px; height: 50px;">
-                <p style="color: #727272;">В новой специальной программе прозвучат давно полюбившиеся песни, а также самые свежие композиции.</p>
-                <p>У поклонников есть уникальная возможность услышать новые треки в живом исполнении в числе первых!
+            <div class="col-md-12 col-lg-6 h-auto" style="color: #233550; font-size: 18px;">
+                <p style="color: #727272;">В новой специальной программе прозвучат давно полюбившиеся песни, а также самые свежие композиции.
+                У поклонников есть уникальная возможность услышать новые треки в живом исполнении в числе первых!
                     На концертах Баста всегда поражает своим талантом и трудолюбием, уважительным отношением к зрителю, идеями, и конечно же, невероятным обаянием. Баста- это всегда праздник, феерия, взрыв эмоций и драйв. Эффектное световое и лазерное сопровождение и супер качественный звук, как одна из составляющих ошеломительного успеха каждой концертной программы.
                     <br><br>
                     
@@ -36,7 +36,7 @@
         <div class="row" style="margin-top: 120px;">
             <div class="col"></div>
             <div class="col"></div>
-            <button type="button" class="btn col" style="font-size: 18px; color: #2489FF;"><img src="image/news_inside/arround.png" class="img-fluid"> Ко всем новостям</button>
+            <button type="button" class="btn col-md-5 col-lg-4" style="font-size: 18px; color: #2489FF;"><img src="image/news_inside/arround.png" class="img-fluid"> Ко всем новостям</button>
             <div class="col"></div>
             <div class="col"></div>
         </div>
