--- a/VolgogradStadion/about.html
+++ b/VolgogradStadion/about.html
@@ -20,12 +20,15 @@
           </nav>
     </div>
     <div class="container" >
-        <div class="row">
-            <div class="col">
+        <div class="row d-flex h-auto fontSize-18">
+            <div class="col-md-12 col-lg-6">
                 <img class="img-fluid" src="image/about/about.png">
             </div>
-            <div class="col-7" style="color: #233550; font-size: 18px; height: 50px;">
+            <div class="col-md-12 col-lg-6 h-auto" style="color: #233550;">
                 <p>Многофункциональный спортивный комплекс «ВТБ Арена» объединяет под одной крышей универсальную «ВТБ Арену», Центральный стадион «Динамо» имени Льва Яшина и торговый центр «Арена Плаза». Центральный стадион стал домашней площадкой для футбольного клуба «Динамо», на малой арене проходят концертные шоу, спортивные турниры, а также тренировки и матчи хоккейного клуба «Динамо».
+                    <br><br>
+                    
+                    Кроме того, большие экраны за сценой предоставят возможность рассмотреть происходящее действо в мельчайших подробностях.
                     <br><br>
                     При проведении футбольных матчей вместимость арены составляет 25 716 зрителей: места расположены на трех ярусах трибун и этаже VIP-лож. Удобная планировка, отдельная фан-зона, сиденья с подогревом, современные мультимедийные системы позволяют в полной мере наслаждаться игрой. Общая вместимость спортивного комплекса около 47 тысяч человек.
                     <br><br>
@@ -37,39 +40,12 @@
                 <!-- <p>Открытие футбольного стадиона состоялось 26 мая 2019 года проведением матча между «Динамо» и «Арсеналом» в рамках 30-го тура Российской Премьер-лиги. Сегодня купить билеты на матчи, проходящие на площадке «ВТБ Арены», не составляет никакого труда – нужно лишь несколько минут Вашего времени и доступ в интернет. В апреле и мае 2021 года «ВТБ Арена» принимает матчи Российской Премьер-лиги Тинькофф. В скором времени ФК «Динамо» предстоит сразиться с «Химками» и «ЦСКА». Билеты уже поступили в продажу! На все предстоящие матчи заказать билеты можно на нашем сайте в любое удобное время, оплатив их после подтверждения заказа.</p> -->
             </div>
         </div>
-        <div class="row" style="margin-top: 120px;">
+        <div class="row" style="margin-top: 50px;">
             <div class="col"></div>
             <div class="col"></div>
-            <button type="button" class="btn btn-primary col" style="font-size: 18px;">На Главную <img src="image/about/Arround.png" class="img-fluid"></button>
+            <button type="button" class=" btn btn-primary col-md-5 col-lg-2 fontSize-18"><a class="fontSize-18" style="color:white; text-decoration: none;">На Главную </a><img src="image/about/arroundbutton.png" class="img-fluid"></button>
             <div class="col"></div>
             <div class="col"></div>
         </div>
     </div>
 </body>
-<p>
-    <b>«Волгоград Арена»</b> - футбольный стадион международного класса, построенный в Волгограде к чемпионату мира по футболу 2018 года. Вместимость стадиона составляет до 45 000 зрителей. Арена расположена на берегу Волги, у подножия Мамаева кургана. Стадион оборудован современными системами безопасности.
-   </p>
-   <p>
-        По итогам народного голосования на сайте на портале StadiumDB «Волгоград Арена» была выбрана лучшим стадионом 2018 года в мире.
-   </p>
-   <p>
-        Сегодня "Волгоград Арена" - многофункциональная площадка для проведения мероприятий. Кроме того, что после проведения Первенства стадион стал домашней ареной СК "Ротор". "Волгоград Арена" используется для массовых мероприятий любого уровня.
-   </p>
-   <p>
-        Матчи чемпионата мира по футболу 2018 года :
-   </p>
-   <p>
-        18 июня 2018 - Тунис - Англия 1:2
-   </p>
-   <p>
-        22 июня 2018 - Нигерия - Исландия 2:0
-   </p>
-   <p>
-        25 июня 2018 - Саудовская Аравия - Египет 2:1
-   </p>
-   <p>
-        28 июня 2018 - Япония – Польша 0:1
-   </p>
-   <p>
-       <img width="1000" src="https://volgograd-stadium.ru/upload/resize_cache/iblock/f95/1000_1000_1/f95073ba2b0c2f18847cd992601e29c7.jpg" height="630"><br>
-   </p>
