--- a/VolgogradStadion/news_inside.html
+++ b/VolgogradStadion/news_inside.html
@@ -37,6 +37,7 @@
             <div class="col"></div>
             <div class="col"></div>
             <button type="button" class="btn col-md-5 col-lg-4" style="font-size: 18px; color: #2489FF;"><img src="image/news_inside/arround.png" class="img-fluid"> Ко всем новостям</button>
+	                <button type="button" class="btn col-md-5 col-lg-4" style="font-size: 18px; color: #2489FF;" href="https://volgograd-stadium.ru"><img src="image/news_inside/arround.png" class="img-fluid"> Ко всем новостям</button>
             <div class="col"></div>
             <div class="col"></div>
         </div>
