--- a/OilPower/catalog.html
+++ b/OilPower/catalog.html
@@ -12,20 +12,39 @@
 </html> 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="body__card span10" style="width: 19rem; margin-right: 30px;">
-                <img src="image/catalog/image-card1.png" class="body__card_image">
-                <div class=" body__card_body">
-                  <a href="#"class="body__card_title" >Фитинги</a>
-                </div>
+        <div class="row-fluid">
+            <div class="body__card span4 body__card_all">
+              <img src="image/catalog/image-card1.png" class="body__card_image">
+              <div class=" body__card_body">
+                <a href="#"class="body__card_title" >Фитинги</a>
               </div>
-            <div class="body__card" style="width: 19rem;">
+            </div>
+              <div class="body__card span4 body__card_all">
                 <img src="image/catalog/image-card2.png" class="body__card_image">
                 <div class=" body__card_body">
                   <a href="#"class="body__card_title" >Соединения БРС</a>
                 </div>
+              </div>
+            <div class="body__card span4 body__card_all">
+              <img src="image/catalog/image-card3.png" class="body__card_image">
+              <div class=" body__card_body">
+                <a href="#"class="body__card_title" >Шаровые краны</a>
+              </div>
             </div>
         </div>
-
+        <div class="row-fluid" style="margin-top: 10px;">
+          <div class="body__card span4 body__card_all" >
+            <img src="image/catalog/image-card4.png" class="body__card_image">
+            <div class=" body__card_body">
+              <a href="#"class="body__card_title" >Гидравлическая аппаратура</a>
+            </div>
+          </div>
+            <div class="body__card span4 body__card_all">
+              <img src="image/catalog/image-card5.png" class="body__card_image">
+              <div class=" body__card_body">
+                <a href="#"class="body__card_title" >Гидрораспределители</a>
+              </div>
+            </div>
+      </div>
     </div>
 </body>
