--- a/OilPower/catalog.html
+++ b/OilPower/catalog.html
@@ -11,46 +11,45 @@
 </head>
 </html> 
 <body>
-    <div class="container">
+    <div class="body-container">
        <div>
-         <p class="body__main_p">Каталог</p>
-        <ul class="body__breadcrumb">
-          <li><a href="#" class="body__breadcrumb_black">Главная</a> <span class="body__breadcrumb_bread">/</span></li>
+         <p class="cataloge-main-p">Каталог</p>
+        <ul class="cataloge-breadcrumb">
+          <li><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
           <!-- <li><a href="#">Библиотека</a> <span class="divider">/</span></li> -->
-          <li class="body__breadcrumb_active">Каталог</li>
+          <li class="cataloge-breadcrumb-active">Каталог</li>
         </ul>
        </div>
-        <div class="row-fluid">
-            <div class="body__card span4 body__card_all">
-              <img src="image/catalog/image-card1.png" class="body__card_image">
-              <div class=" body__card_body">
-                <a href="#"class="body__card_title" >Фитинги</a>
+        <div class="cataloge-cards">
+            <div class="cataloge-card__elem  cataloge-card-all">
+              <img src="image/catalog/image-card1.png" class="cataloge-card-image">
+              <div class=" cataloge-card-body">
+                <a href="#"class="cataloge-card-title" >Фитинги</a>
               </div>
             </div>
-              <div class="body__card span4 body__card_all">
-                <img src="image/catalog/image-card2.png" class="body__card_image">
-                <div class=" body__card_body">
-                  <a href="#"class="body__card_title" >Соединения БРС</a>
+              <div class="cataloge-card__elem  cataloge-card-all">
+                <img src="image/catalog/image-card2.png" class="cataloge-card-image">
+                <div class=" cataloge-card-body">
+                  <a href="#"class="cataloge-card-title" >Соединения БРС</a>
                 </div>
               </div>
-            <div class="body__card span4 body__card_all">
-              <img src="image/catalog/image-card3.png" class="body__card_image">
-              <div class=" body__card_body">
-                <a href="#"class="body__card_title" >Шаровые краны</a>
+            <div class="cataloge-card__elem  cataloge-card-all">
+              <img src="image/catalog/image-card3.png" class="cataloge-card-image">
+              <div class=" cataloge-card-body">
+                <a href="#"class="cataloge-card-title" >Шаровые краны</a>
               </div>
             </div>
-        </div>
-        <div class="row-fluid" style="margin-top: 10px;">
-          <div class="body__card span4 body__card_all" >
-            <img src="image/catalog/image-card4.png" class="body__card_image">
-            <div class=" body__card_body">
-              <a href="#"class="body__card_title" >Гидравлическая аппаратура</a>
+
+          <div class="cataloge-card__elem cataloge-card-all">
+            <img src="image/catalog/image-card4.png" class="cataloge-card-image">
+            <div class=" cataloge-card-body">
+              <a href="#"class="cataloge-card-title" >Гидравлическая аппаратура</a>
             </div>
           </div>
-            <div class="body__card span4 body__card_all">
-              <img src="image/catalog/image-card5.png" class="body__card_image">
-              <div class=" body__card_body">
-                <a href="#"class="body__card_title" >Гидрораспределители</a>
+            <div class="cataloge-card__elem  cataloge-card-all">
+              <img src="image/catalog/image-card5.png" class="cataloge-card-image">
+              <div class=" cataloge-card-body">
+                <a href="#"class="cataloge-card-title" >Гидрораспределители</a>
               </div>
             </div>
       </div>
