--- a/OilPower/catalog.html
+++ b/OilPower/catalog.html
@@ -21,36 +21,27 @@
         </ul>
        </div>
         <div class="cataloge-cards">
-            <div class="cataloge-card__elem  cataloge-card-all">
-              <img src="image/catalog/image-card1.png" class="cataloge-card-image">
-              <div class=" cataloge-card-body">
-                <a href="#"class="cataloge-card-title" >Фитинги</a>
-              </div>
+            <div class="cataloge-cards__elem">
+              <img src="image/catalog/image-card1.png" class="cataloge-cards-image">
+                <a href="#"class="cataloge-cards__body" >Фитинги</a>
             </div>
-              <div class="cataloge-card__elem  cataloge-card-all">
-                <img src="image/catalog/image-card2.png" class="cataloge-card-image">
-                <div class=" cataloge-card-body">
-                  <a href="#"class="cataloge-card-title" >Соединения БРС</a>
-                </div>
+              <div class="cataloge-cards__elem">
+                <img src="image/catalog/image-card2.png" class="cataloge-cards-image">
+                  <a href="#"class="cataloge-cards__body" >Соединения БРС</a>
               </div>
-            <div class="cataloge-card__elem  cataloge-card-all">
-              <img src="image/catalog/image-card3.png" class="cataloge-card-image">
-              <div class=" cataloge-card-body">
-                <a href="#"class="cataloge-card-title" >Шаровые краны</a>
-              </div>
+            <div class="cataloge-cards__elem">
+              <img src="image/catalog/image-card3.png" class="cataloge-cards-image">
+                <a href="#"class="cataloge-cards__body" >Шаровые краны</a>
+
             </div>
 
-          <div class="cataloge-card__elem cataloge-card-all">
-            <img src="image/catalog/image-card4.png" class="cataloge-card-image">
-            <div class=" cataloge-card-body">
-              <a href="#"class="cataloge-card-title" >Гидравлическая аппаратура</a>
-            </div>
+          <div class="cataloge-cards__elem">
+            <img src="image/catalog/image-card4.png" class="cataloge-cards-image">
+              <a href="#"class="cataloge-cards__body" >Гидравлическая аппаратура</a>
           </div>
-            <div class="cataloge-card__elem  cataloge-card-all">
-              <img src="image/catalog/image-card5.png" class="cataloge-card-image">
-              <div class=" cataloge-card-body">
-                <a href="#"class="cataloge-card-title" >Гидрораспределители</a>
-              </div>
+            <div class="cataloge-cards__elem">
+              <img src="image/catalog/image-card5.png" class="cataloge-cards-image">
+                <a href="#"class="cataloge-cards__body" >Гидрораспределители</a>
             </div>
       </div>
     </div>
