--- a/OilPower/catalog.html
+++ b/OilPower/catalog.html
@@ -21,28 +21,26 @@
         </ul>
        </div>
         <div class="cataloge-cards">
-            <div class="cataloge-cards__elem">
+            <a href="#"class="cataloge-cards__elem" style="display: block;">
               <img src="image/catalog/image-card1.png" class="cataloge-cards-image">
-                <a href="#"class="cataloge-cards__body" >Фитинги</a>
-            </div>
-              <div class="cataloge-cards__elem">
+                <span class="cataloge-cards__body" >Фитинги</span>
+            </a>
+              <a href="#" class="cataloge-cards__elem">
                 <img src="image/catalog/image-card2.png" class="cataloge-cards-image">
-                  <a href="#"class="cataloge-cards__body" >Соединения БРС</a>
-              </div>
-            <div class="cataloge-cards__elem">
+                  <span class="cataloge-cards__body" >Соединения БРС</span>
+              </a>
+            <a href="#" class="cataloge-cards__elem">
               <img src="image/catalog/image-card3.png" class="cataloge-cards-image">
-                <a href="#"class="cataloge-cards__body" >Шаровые краны</a>
-
-            </div>
-
-          <div class="cataloge-cards__elem">
+                <span class="cataloge-cards__body" >Шаровые краны</span>
+            </a>
+          <a href="#" class="cataloge-cards__elem">
             <img src="image/catalog/image-card4.png" class="cataloge-cards-image">
-              <a href="#"class="cataloge-cards__body" >Гидравлическая аппаратура</a>
-          </div>
-            <div class="cataloge-cards__elem">
+              <span class="cataloge-cards__body" >Гидравлическая аппаратура</span>
+          </a>
+            <a href="#" class="cataloge-cards__elem">
               <img src="image/catalog/image-card5.png" class="cataloge-cards-image">
-                <a href="#"class="cataloge-cards__body" >Гидрораспределители</a>
-            </div>
+                <span class="cataloge-cards__body" >Гидрораспределители</span>
+            </a>
       </div>
     </div>
 </body>
