--- a/OilPower/catalog.html
+++ b/OilPower/catalog.html
@@ -21,11 +21,12 @@
         </ul>
        </div>
         <div class="cataloge-cards">
-            <a href="#"class="cataloge-cards__elem" style="display: block;">
+            <a href="#"class="cataloge-cards__elem">
               <img src="image/catalog/image-card1.png" class="cataloge-cards-image">
                 <span class="cataloge-cards__body" >Фитинги</span>
             </a>
               <a href="#" class="cataloge-cards__elem">
+                
                 <img src="image/catalog/image-card2.png" class="cataloge-cards-image">
                   <span class="cataloge-cards__body" >Соединения БРС</span>
               </a>
