--- a/OilPower/shop-more.html
+++ b/OilPower/shop-more.html
@@ -30,49 +30,132 @@
       </div>
       <div class="main-content body-container">
         <div class="shop-cards">
-          <a href="#"class="cataloge-cards__elem">
+          <div href="#"class="shopmore-cards__elem">
+            <div>
             <img src="image/shop/image-card4.png" class="cataloge-cards-image">
+            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
+            </div>
             <div class="shopmore-cards__body">
             <span>Размер тела</span><span>3/8дм</span>
             <span>Номинальное давление</span><span>700 bar</span>
             <span>Номинальный поток</span><span>28 л/мин</span>
-            <span>Диапазон температур (уплотнения STD)</span><span>от-20°C до+120°C</span>
-            <span>Стандартный материал уплотнений</span><span>NBR</span>
+            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
+            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
+            <br><a class="shopmore-cards__button">Подробнее</a>
             </div>
-          </a>
-            <a href="#" class="cataloge-cards__elem">
-              
-              <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-                <span class="shopmore-cards__body" >Резьбовые БРС 700 bar 3/8 дюйма</span>
-            </a>
-          <a href="#" class="cataloge-cards__elem">
+          </div>
+          <div href="#"class="shopmore-cards__elem">
+            <div>
             <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-              <span class="shopmore-cards__body" >Резьбовые БРС 700 bar 3/8 дюйма</span>
-          </a>
-        <a href="#" class="cataloge-cards__elem">
-          <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-            <span class="shopmore-cards__body" >Резьбовые БРС 700 bar 3/8 дюйма</span>
-        </a>
-          <a href="#" class="cataloge-cards__elem">
+            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
+            </div>
+            <div class="shopmore-cards__body">
+            <span>Размер тела</span><span>3/8дм</span>
+            <span>Номинальное давление</span><span>700 bar</span>
+            <span>Номинальный поток</span><span>28 л/мин</span>
+            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
+            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
+            <br><a class="shopmore-cards__button">Подробнее</a>
+            </div>
+          </div>
+          <div href="#"class="shopmore-cards__elem">
+            <div>
             <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-              <span class="shopmore-cards__body" >Резьбовые БРС 700 bar 3/8 дюйма</span>
-          </a>
-          <a href="#" class="cataloge-cards__elem">
+            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
+            </div>
+            <div class="shopmore-cards__body">
+            <span>Размер тела</span><span>3/8дм</span>
+            <span>Номинальное давление</span><span>700 bar</span>
+            <span>Номинальный поток</span><span>28 л/мин</span>
+            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
+            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
+            <br><a class="shopmore-cards__button">Подробнее</a>
+            </div>
+          </div>
+          <div href="#"class="shopmore-cards__elem">
+            <div>
             <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-              <span class="shopmore-cards__body" >Резьбовые БРС 700 bar 3/8 дюйма</span>
-          </a>
-          <a href="#" class="cataloge-cards__elem">
+            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
+            </div>
+            <div class="shopmore-cards__body">
+            <span>Размер тела</span><span>3/8дм</span>
+            <span>Номинальное давление</span><span>700 bar</span>
+            <span>Номинальный поток</span><span>28 л/мин</span>
+            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
+            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
+            <br><a class="shopmore-cards__button">Подробнее</a>
+            </div>
+          </div>
+          <div href="#"class="shopmore-cards__elem">
+            <div>
             <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-              <span class="shopmore-cards__body" >Резьбовые БРС 700 bar 3/8 дюйма</span>
-          </a>
-            <a href="#" class="cataloge-cards__elem">
-              <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-                <span class="shopmore-cards__body" >Резьбовые БРС 700 bar 3/8 дюйма</span>
-            </a>
-            <a href="#" class="cataloge-cards__elem">
-              <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-                <span class="shopmore-cards__body" >Резьбовые БРС 700 bar 3/8 дюйма</span>
-            </a>
+            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
+            </div>
+            <div class="shopmore-cards__body">
+            <span>Размер тела</span><span>3/8дм</span>
+            <span>Номинальное давление</span><span>700 bar</span>
+            <span>Номинальный поток</span><span>28 л/мин</span>
+            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
+            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
+            <br><a class="shopmore-cards__button">Подробнее</a>
+            </div>
+          </div>
+          <div href="#"class="shopmore-cards__elem">
+            <div>
+            <img src="image/shop/image-card4.png" class="cataloge-cards-image">
+            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
+            </div>
+            <div class="shopmore-cards__body">
+            <span>Размер тела</span><span>3/8дм</span>
+            <span>Номинальное давление</span><span>700 bar</span>
+            <span>Номинальный поток</span><span>28 л/мин</span>
+            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
+            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
+            <br><a class="shopmore-cards__button">Подробнее</a>
+            </div>
+          </div>
+          <div href="#"class="shopmore-cards__elem">
+            <div>
+            <img src="image/shop/image-card4.png" class="cataloge-cards-image">
+            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
+            </div>
+            <div class="shopmore-cards__body">
+            <span>Размер тела</span><span>3/8дм</span>
+            <span>Номинальное давление</span><span>700 bar</span>
+            <span>Номинальный поток</span><span>28 л/мин</span>
+            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
+            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
+            <br><a class="shopmore-cards__button">Подробнее</a>
+            </div>
+          </div>
+          <div href="#"class="shopmore-cards__elem">
+            <div>
+            <img src="image/shop/image-card4.png" class="cataloge-cards-image">
+            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
+            </div>
+            <div class="shopmore-cards__body">
+            <span>Размер тела</span><span>3/8дм</span>
+            <span>Номинальное давление</span><span>700 bar</span>
+            <span>Номинальный поток</span><span>28 л/мин</span>
+            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
+            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
+            <br><a class="shopmore-cards__button">Подробнее</a>
+            </div>
+          </div>
+          <div href="#"class="shopmore-cards__elem">
+            <div>
+            <img src="image/shop/image-card4.png" class="cataloge-cards-image">
+            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
+            </div>
+            <div class="shopmore-cards__body">
+            <span>Размер тела</span><span>3/8дм</span>
+            <span>Номинальное давление</span><span>700 bar</span>
+            <span>Номинальный поток</span><span>28 л/мин</span>
+            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
+            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
+            <br><a class="shopmore-cards__button">Подробнее</a>
+            </div>
+          </div>
     </div>
       </div>
     </div>
