--- a/OilPower/shop-more.html
+++ b/OilPower/shop-more.html
@@ -14,8 +14,8 @@
           <p class="cataloge-main-p">Резьбовые БРС 700 bar</p>
         <ul class="cataloge-breadcrumb">
           <li><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
-          <li><a href="#">Каталог</a> <span class="divider">/</span></li>
-          <li><a href="#">Соединения БРС</a> <span class="divider">/</span></li>
+          <li><a href="catalog.html">Каталог</a> <span class="divider">/</span></li>
+          <li><a href="shop.html">Соединения БРС</a> <span class="divider">/</span></li>
           <li class="cataloge-breadcrumb-active">Резьбовые БРС 700 bar</li>
         </ul>
       </div>
@@ -41,7 +41,7 @@
             <span>Номинальный поток</span><span>28 л/мин</span>
             <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
             <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a class="shopmore-cards__button">Подробнее</a>
+            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
             </div>
           </div>
           <div href="#"class="shopmore-cards__elem">
@@ -55,7 +55,7 @@
             <span>Номинальный поток</span><span>28 л/мин</span>
             <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
             <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a class="shopmore-cards__button">Подробнее</a>
+            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
             </div>
           </div>
           <div href="#"class="shopmore-cards__elem">
@@ -69,7 +69,7 @@
             <span>Номинальный поток</span><span>28 л/мин</span>
             <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
             <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a class="shopmore-cards__button">Подробнее</a>
+            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
             </div>
           </div>
           <div href="#"class="shopmore-cards__elem">
@@ -83,7 +83,7 @@
             <span>Номинальный поток</span><span>28 л/мин</span>
             <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
             <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a class="shopmore-cards__button">Подробнее</a>
+            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
             </div>
           </div>
           <div href="#"class="shopmore-cards__elem">
@@ -97,7 +97,7 @@
             <span>Номинальный поток</span><span>28 л/мин</span>
             <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
             <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a class="shopmore-cards__button">Подробнее</a>
+            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
             </div>
           </div>
           <div href="#"class="shopmore-cards__elem">
@@ -111,7 +111,7 @@
             <span>Номинальный поток</span><span>28 л/мин</span>
             <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
             <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a class="shopmore-cards__button">Подробнее</a>
+            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
             </div>
           </div>
           <div href="#"class="shopmore-cards__elem">
@@ -125,7 +125,7 @@
             <span>Номинальный поток</span><span>28 л/мин</span>
             <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
             <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a class="shopmore-cards__button">Подробнее</a>
+            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
             </div>
           </div>
           <div href="#"class="shopmore-cards__elem">
@@ -139,7 +139,7 @@
             <span>Номинальный поток</span><span>28 л/мин</span>
             <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
             <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a class="shopmore-cards__button">Подробнее</a>
+            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
             </div>
           </div>
           <div href="#"class="shopmore-cards__elem">
@@ -153,7 +153,7 @@
             <span>Номинальный поток</span><span>28 л/мин</span>
             <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
             <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a class="shopmore-cards__button">Подробнее</a>
+            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
             </div>
           </div>
     </div>
