--- a/OilPower/more.html
+++ b/OilPower/more.html
@@ -20,23 +20,65 @@
       </ul>
     </div>
     <div class="shop-sidebar">
-        <div class="shop-sidebar__elem">
-          <a href="#" class="shop-sidebar__elem_a">Фитинги</a><br>
-          <a href="#" class="shop-sidebar__elem_a">Соединение БРС</a><br>
-          <a href="#" class="shop-sidebar__elem_a">Шаровые краны</a><br>
-          <a href="#" class="shop-sidebar__elem_a">Гидравлическая аппаратура</a><br>
-          <a href="#" class="shop-sidebar__elem_a">Гидрораспределители</a><br>
-        </div>
+      <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Фитинги</a></div>
+      <div class="shop-sidebar-div-active"><a class="shop-sidebar-div-a">Соединение БРС</a></div>
+      <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические БРС iso-7241a</a></div>
+      <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические БРС iso-16028</a></div>
+      <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические резьбовые БРС</a></div>
+      <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Резьбовые БРС 700 bar</a></div>
+      <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические серии vep</a></div>
+      <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Шаровые краны</a></div>
+      <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Гидравлическая аппаратура</a></div>
+      <div class="shop-sidebar-div__bottom"><a class="shop-sidebar-div-a">Гидрораспределители</a></div>
       </div>
     <div class="main-content body-container">
         <div class="more-card">
-            <img src="image/more/image-more1.png" class="more-card__image">
+            <img src="image/more/more-card1.png" class="more-card__image">
             <div class="more-card__body">
                 <h3>Обратный клапан <br>CV-02 G1/4 (VUR;VU;FPR;Ft257;CVU-M)</h3>
-                <span>Размер тела <div id="more-card-div__one"></div> --------1/2дм</span><br><br>
-                <span>Номинальное <br> давление <div id="more-card-div__one"></div>  690 bar</span><br><br>
+               <div class="more-content__div">
+                 <a>Размер тела</a><div id="more-div__line-one"></div><a>1/2 дм</a>
+                </div>
+                <div class="more-content__div">
+                  <a>Номинальное <br> давление</a><div id="more-div__line-one"></div><a> 690 bar</a>
+                 </div>
+                 <div class="more-content__div">
+                  <a>Номинальный <br> поток </a><div id="more-div__line-one"></div><a>  54 л/мин</a>
+                 </div>
+                 <div class="more-content__div">
+                  <a>Номинальное <br> давление </a><div id="more-div__line-one"></div><a>  690 bar</a>
+                 </div>
+                <!-- <span>Номинальное <br> давление <div id="more-card-div__one"></div>  690 bar</span><br><br>
                 <span>Номинальный <br> поток <div id="more-card-div__one"></div> 54 л/мин</span><br><br>
-                <span>Номинальное <br> давление <div id="more-card-div__one"></div> 690 bar</span><br><br>
+                <span>Номинальное <br> давление <div id="more-card-div__one"></div> 690 bar</span><br><br> -->
+            
+            <div class="more-div__elem">
+              <a class="more-buttons__quest">Задайте вопрос по этому товару</a>
+              <a class="more-buttons__whatsapp"><img class="more-buttons__image" src="image/more/whatsApp_icon.png">Заказ в WhatsApp</a>
+            </div>
+          </div>
+        </div>
+        <div class="body-container more-content">
+          <h2>Описание</h2>
+          <p>Резьбовое гидравлическое быстроразъемное соединение (БРС) серии HPA для инструмента на высокое давление 3/8 дюйма</p>
+          <br><br>
+          <h2>Область применения</h2>
+          <p>Муфты серии TGW предназначены для использования в строительно-дорожной технике, в частности гидромолотах, в составе передвижного оборудования, а также сельскохозяйственного и универсального промышленного оборудования.</p>
+          <br><br>
+          <h2>Особенности Муфты серии TGW </h2>
+          <p>Новое клапанное исполнение позволяет избежать повреждений при высокой интенсивности потока и возникновении сильных импульсов, тем самым обеспечивая лучшие эксплуатационные показатели.
+              <br><br>
+            Производятся из цельного стального прута, что обеспечивает дополнительную прочность.
+            В серии KZE-BA используется резьбовой механизм блокировки муфты, сопрягающийся с соответствующими резьбой на ниппеле. Две половины должны быть вручную соединены резьбовым соединением.
+            <br><br>
+            Новое хромовое покрытие обеспечивает надежную защиту от коррозии.
+            <br><br>
+            Муфты серии KZE-B подходят для совместного использования с изделиями серий GROMELLE 6000 и HOLMBURY TGW.</p>
+            <br><br>
+            <h2>Техническая схема</h2>
+            <div>
+            <img class="more-content__img__elem" src="image/more/image-more1.png">
+            <img class="more-content__img" src="image/more/image-more2.png"> <img class="more-content__img"src="image/more/image-more3.png">
             </div>
         </div>
     </div>
