--- a/OilPower/shop-more.html
+++ b/OilPower/shop-more.html
@@ -10,7 +10,7 @@
 </html> 
 <body>
     <div class="">
-      <div class="body-container">
+      <div class="breadcrumb-container">
           <p class="cataloge-main-p">Резьбовые БРС 700 bar</p>
         <ul class="cataloge-breadcrumb">
           <li><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
@@ -20,14 +20,17 @@
         </ul>
       </div>
       <div class="shop-sidebar">
-        <div class="shop-sidebar__elem">
-          <a href="#" class="shop-sidebar__elem_a">Фитинги</a><br>
-          <a href="#" class="shop-sidebar__elem_a">Соединение БРС</a><br>
-          <a href="#" class="shop-sidebar__elem_a">Шаровые краны</a><br>
-          <a href="#" class="shop-sidebar__elem_a">Гидравлическая аппаратура</a><br>
-          <a href="#" class="shop-sidebar__elem_a">Гидрораспределители</a><br>
+        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Фитинги</a></div>
+        <div class="shop-sidebar-div-active"><a class="shop-sidebar-div-a">Соединение БРС</a></div>
+        <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические БРС iso-7241a</a></div>
+        <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические БРС iso-16028</a></div>
+        <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические резьбовые БРС</a></div>
+        <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Резьбовые БРС 700 bar</a></div>
+        <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические серии vep</a></div>
+        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Шаровые краны</a></div>
+        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Гидравлическая аппаратура</a></div>
+        <div class="shop-sidebar-div__bottom"><a class="shop-sidebar-div-a">Гидрораспределители</a></div>
         </div>
-      </div>
       <div class="main-content body-container">
         <div class="shop-cards">
           <div href="#"class="shopmore-cards__elem">
@@ -72,90 +75,7 @@
             <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
             </div>
           </div>
-          <div href="#"class="shopmore-cards__elem">
-            <div>
-            <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
-            </div>
-            <div class="shopmore-cards__body">
-            <span>Размер тела</span><span>3/8дм</span>
-            <span>Номинальное давление</span><span>700 bar</span>
-            <span>Номинальный поток</span><span>28 л/мин</span>
-            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
-            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
-            </div>
-          </div>
-          <div href="#"class="shopmore-cards__elem">
-            <div>
-            <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
-            </div>
-            <div class="shopmore-cards__body">
-            <span>Размер тела</span><span>3/8дм</span>
-            <span>Номинальное давление</span><span>700 bar</span>
-            <span>Номинальный поток</span><span>28 л/мин</span>
-            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
-            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
-            </div>
-          </div>
-          <div href="#"class="shopmore-cards__elem">
-            <div>
-            <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
-            </div>
-            <div class="shopmore-cards__body">
-            <span>Размер тела</span><span>3/8дм</span>
-            <span>Номинальное давление</span><span>700 bar</span>
-            <span>Номинальный поток</span><span>28 л/мин</span>
-            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
-            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
-            </div>
-          </div>
-          <div href="#"class="shopmore-cards__elem">
-            <div>
-            <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
-            </div>
-            <div class="shopmore-cards__body">
-            <span>Размер тела</span><span>3/8дм</span>
-            <span>Номинальное давление</span><span>700 bar</span>
-            <span>Номинальный поток</span><span>28 л/мин</span>
-            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
-            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
-            </div>
-          </div>
-          <div href="#"class="shopmore-cards__elem">
-            <div>
-            <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
-            </div>
-            <div class="shopmore-cards__body">
-            <span>Размер тела</span><span>3/8дм</span>
-            <span>Номинальное давление</span><span>700 bar</span>
-            <span>Номинальный поток</span><span>28 л/мин</span>
-            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
-            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
-            </div>
-          </div>
-          <div href="#"class="shopmore-cards__elem">
-            <div>
-            <img src="image/shop/image-card4.png" class="cataloge-cards-image">
-            <h3>Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
-            </div>
-            <div class="shopmore-cards__body">
-            <span>Размер тела</span><span>3/8дм</span>
-            <span>Номинальное давление</span><span>700 bar</span>
-            <span>Номинальный поток</span><span>28 л/мин</span>
-            <span>Диапазон температур <br>(уплотнения STD)</span><span>от -20°C <br>до +120°C</span>
-            <span>Стандартный материал <br>уплотнений</span><span>NBR</span>
-            <br><a href="more.html" class="shopmore-cards__button">Подробнее</a>
-            </div>
-          </div>
+          
     </div>
       </div>
     </div>
