--- a/OilPower/shop.html
+++ b/OilPower/shop.html
@@ -10,8 +10,8 @@
 </html> 
 <body>
     <div class="">
-      <div class="body-container">
-          <p class="cataloge-main-p">Соединения БРС</p>
+      <div class="breadcrumb-container">
+          <p class="cataloge-main-p">Каталог</p>
         <ul class="cataloge-breadcrumb">
           <li><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
           <li><a href="#">Каталог</a> <span class="divider">/</span></li>
@@ -19,14 +19,12 @@
         </ul>
       </div>
       <div class="shop-sidebar">
-        <div class="shop-sidebar__elem">
-          <a href="#" class="shop-sidebar__elem_a">Фитинги</a><br>
-          <a href="#" class="shop-sidebar__elem_a">Соединение БРС</a><br>
-          <a href="#" class="shop-sidebar__elem_a">Шаровые краны</a><br>
-          <a href="#" class="shop-sidebar__elem_a">Гидравлическая аппаратура</a><br>
-          <a href="#" class="shop-sidebar__elem_a">Гидрораспределители</a><br>
+        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Фитинги</a></div>
+        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Соединение БРС</a></div>
+        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Шаровые краны</a></div>
+        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Гидравлическая аппаратура</a></div>
+        <div class="shop-sidebar-div__bottom"><a class="shop-sidebar-div-a">Гидрораспределители</a></div>
         </div>
-      </div>
       <div class="main-content body-container">
         <div class="shop-cards">
           <a href="#"class="cataloge-cards__elem">
